# macprefs

./: MANIFEST.in  Makefile  README.md  bump.sh  pyproject.toml  setup.py
.github/workflows/: release.yml
Formula/: macprefs.rb
tests/: test_config.py  test_macprefs.py  test_utils.py
tests/modules/: test_app_store_preferences.py  test_dotfiles.py  test_internet_accounts.py  test_preferences.py  test_shared_file_lists.py  test_ssh_files.py  test_startup_items.py  test_system_preferences.py
