[project]
name = "macprefs"
dynamic = ["version"]
urls = { "Source" = "https://github.com/sijanc147/macprefs", "Bug Tracker" = "https://github.com/sijanc147/macprefs/issues" }
description = "Backup and Restore your Mac System and App Preferences"
authors = [
    { name = "Sean Bugeja", email = "seanbugeja23@gmail.com" },
    { name = "Clint M", email = "cmodien@gmail.com" },
]
requires-python = ">=3.8"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Unlicense" }
keywords = ["mac", "backup", "prefereces", "prefs"]
classifiers = [
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-testmon",
    "pytest-watcher>=0.3.4",
    "mock",
    "pylint",
]

[project.scripts]
macprefs = "macprefs.__main__:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests"]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "macprefs.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """
--maxfail=2
-s
--tb=native
-v
-m='not integration'
--cov=macprefs
--cov-report=xml:reports/coverage.xml
--cov-report=term-missing
"""
markers = "integration: integration tests"

[tool.pytest-watcher]
now = false
delay = 0.2
runner = "pytest"
runner_args = []
patterns = ["*.py"]
ignore_patterns = []

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-final-newline",
    "invalid-name",
    "line-too-long",
]

[tool.pdm.dev-dependencies]
dev = ["black>=23.7.0"]

[tool.pdm.scripts]
test = "pytest"
lint = "pylint macprefs/*.py tests/*.py"
